--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "@material-ui/core": "1.2.0",
+    "@material-ui/core": "^4.2.1",
     "d3-ease": "1.0.3",
     "firebase": "5.0.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-firebase-file-uploader": "2.4.1",
     "react-move": "2.7.0",
     "react-reveal": "1.2.2",
-    "react-router-dom": "4.3.1"
+    "react-router-dom": "4.3.1",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
